--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
     <link rel="icon" href="https://ayato.life/icon.webp">
   </head>
-  <body class="body">
+  <body>
     <div class="div">
         <span class="span">
             <h1 class="h1">ayato.life</h1>
