--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <title>ayato.life</title>
     <link rel="stylesheet" type="text/css" href="index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
-    <link rel="icon" href="https://ayato.life/icon.webp">
+    <link rel="icon" href="icon.webp">
   </head>
   <body>
     <div class="div">
         <span class="span">
             <h1 class="h1">ayato.life</h1>
-            <img class="bubble-tea" src="https://ayato.life/assets/bubble-tea.svg">
+            <img class="bubble-tea" src="bubble-tea.svg">
         </span>
         <blockquote class="blockquote" style="border-left: 5px solid #017bff;">
             <p>We love Kamisato Ayato ♥</p>
         </blockquote>
-        <img class="main-img" src="https://pbs.twimg.com/media/FN7413JVEAAL6dI?format=jpg&name=medium">
+        <img class="main-img" src="ayato.jpg">
         <footer class="footer">
             <p>Made with 💙 by <a href="https://github.com/ZenShibata">Zen</a>. Remixed by <a href="https://github.com/sotredeveloepr">sotredeveloepr</a></p>
         </footer>
